Set environment variables in /etc