@@ -1,17 +1,13 @@
-export TERMINAL='kitty'
+#!/bin/sh
+
 export EDITOR='kak'
 export VISUAL='kak'
 export DIFFPROG='nvim -d'
 export MANPAGER='kak-man-pager'
-export LANG=en_US.UTF-8
-export LC_ALL=en_US.UTF-8
 export WORDCHARS='*?_.[]~&!#$%^(){}<>'
 
+# Used by bash-language-server
 export EXPLAINSHELL_ENDPOINT="http://localhost:5000"
-
-# Scale all GTK3 apps for HiDPI screen
-export GDK_SCALE=2
-export GDK_DPI_SCALE=0.5
 
 # Keep py3status 'do_not_disturb' module in sync with i3 lock and restart
 export PY3STATUS_DND_LOCK="$HOME/.cache/py3status_do_not_disturb.lock"
@@ -20,13 +16,9 @@ export PY3STATUS_DND_LOCK="$HOME/.cache/py3status_do_not_disturb.lock"
 export PATH="$HOME/bin:$PATH"
 
 # Use gpg-agent as ssh-agent
-if [[ "$HOST" =~ "desktop-" ]]; then
-  export SSH_AUTH_SOCK="$XDG_RUNTIME_DIR/gnupg/S.gpg-agent.ssh"
-fi
-
-# FZ configuration
-export FZ_CMD=j
-export FZ_SUBDIR_CMD=jj
+case "$(hostname)" in
+    desktop-*) export SSH_AUTH_SOCK="$XDG_RUNTIME_DIR/gnupg/S.gpg-agent.ssh" ;;
+esac
 
 # Pass configuration
 export PASSWORD_STORE_CHARACTER_SET='a-zA-Z0-9~!@#$%^&*()-_=+[]{};:,.<>?'
@@ -34,12 +26,13 @@ export PASSWORD_STORE_GENERATED_LENGTH=40
 
 # Java configuration
 export JAVA_HOME="/usr/lib/jvm/java-8-jdk"
-export PATH="$JAVA_HOME/bin:$PATH"
 
-# Maven configuration
-export MAVEN_OPTS="-Xms1g -Xmx12g -XX:PermSize=1g"
-export M3_HOME="/usr/share/maven3"
-export PATH="$M3_HOME/bin:$PATH"
+# FZ configuration
+export FZ_CMD=j
+export FZ_SUBDIR_CMD=jj
+
+# Java configuration
+export PATH="$JAVA_HOME/bin:$PATH"
 
 # Android configuration
 export ANDROID_SDK_ROOT="$HOME/.android/sdk"
@@ -53,17 +46,8 @@ if hash ruby 2>/dev/null; then
   export PATH="$GEM_HOME/bin:$PATH"
 fi
 
-# RVM configuration
-sandbox_init_rvm() {
-  if [ -f /usr/share/rvm/scripts/rvm ]; then
-     source /usr/share/rvm/scripts/rvm
-  fi
-}
-sandbox_hook rvm rvm
-sandbox_hook rvm eyaml
-
 # Go configuration
-export GOPATH=/home/maximbaz/.go
+export GOPATH="$HOME/.go"
 export PATH="$GOPATH/bin:$PATH"
 
 # NPM configuration
